--- a/spring-boot-microservice-hellowithjsp-externalserver-service/pom.xml
+++ b/spring-boot-microservice-hellowithjsp-externalserver-service/pom.xml
@@ -30,7 +30,7 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<finalName>jboss-hellowithjsp</finalName>
+		<finalName>jboss-hellowithjsp-iums-v1</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
